[package]
name = "encrypt38"
version = "1.1.2"
authors = ["ceca69ec8e1bcad6c6d79e1dcf7214ff67766580a62b7d19a6fb094c97b4f2dc"]
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = "Implementation of bip-0038 for use on command line interface."
documentation = "https://docs.rs/encrypt38"
homepage = "https://crates.io/crates/encrypt38"
repository = "https://github.com/ceca69ec/encrypt38"
keywords = [
	"bip-0038",
	"bitcoin",
	"cli",
	"decryption",
	"encryption"
]
categories = [
	"command-line-interface",
	"cryptography::cryptocurrencies"
]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
bech32 = "0.8.1"
bip38 = "1.0.0"
bs58 = "0.4.0"
clap = "2.33.3"
ripemd160 = "0.9.1"
secp256k1 = "0.20.3"
sha2 = "0.9.5"
