[package]
name = "encrypt38"
version = "1.1.7"
authors = ["ceca69ec8e1bcad6c6d79e1dcf7214ff67766580a62b7d19a6fb094c97b4f2dc"]
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]
description = "Command line tool to encrypt and decrypt bitcoin private keys with bip-0038 standard."
documentation = "https://docs.rs/encrypt38"
repository = "https://github.com/ceca69ec/encrypt38"
keywords = [
	"bip-0038",
	"bitcoin",
	"cli",
	"decryption",
	"encryption"
]
categories = [
	"command-line-interface",
	"cryptography::cryptocurrencies"
]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
bip38 = "1.1.1"
bitcoin-bech32 = "0.13.0"
bs58 = "0.5.1"
clap = { version = "4.5.4", features = ["cargo"] }
ripemd = "0.1.3"
secp256k1 = "0.29.0"
sha2 = "0.10.8"
